Add meta tags and footer changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Welcome to HackwithMAIT3.0, the annual hackathon organized by the TechCom society of the Computer Science and Engineering department at MAIT.
+
+    This event brings together some of the brightest and most creative minds from across India to compete and collaborate on innovative ideas and projects. Over the course of the hackathon, participants will have the opportunity to work on a wide range of challenges and problem statements, and to learn from experienced mentors and judges from the tech industry.
+
+    At HackwithMAIT3.0, we believe that creativity and ingenuity knows no bounds."
+    />
+    <meta property="og:image" content="./src/assets/logo.jpg"/>
     <title>Hack with MAIT 3.0</title>
   </head>
   <body>
