--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     At HackwithMAIT3.0, we believe that creativity and ingenuity knows no bounds."
     />
-    <meta property="og:image" content="./src/assets/logo.jpg"/>
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
     <title>Hack with MAIT 3.0</title>
   </head>
   <body>
