--- a/index.html
+++ b/index.html
@@ -2,18 +2,80 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Hack with MAIT 4.0" />
+    <meta name="description" content="Hack with MAIT 4.0 is coming soon!" />
+    <meta
+      name="keywords"
+      content="Hack with MAIT 4.0, Hackathons, New Delhi, Engineering, Computer Science, GGSIPU, Devfolio Hackathons"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
+    <meta name="author" content="HackwithMAIT 4.0" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@nawed2611" />
+    <meta name="twitter:creator" content="@nawed2611" />
+    <meta name="twitter:title" content="Nawed Ali" />
+    <meta
+      name="twitter:description"
+      content="Hack with MAIT 4.0 is coming soon!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.hackwithmait.co/assets/logo.d8d16c01.jpg"
+    />
+    <meta property="og:title" content="Hack with MAIT 4.0" />
+    <meta
+      property="og:description"
+      content="Hack with MAIT 4.0 is coming soon!"
+    />
+    <meta
+      property="og:image"
+      content="https://www.hackwithmait.co/assets/logo.d8d16c01.jpg"
+    />
+    <meta property="og:url" content="https://www.hackwithmait.co" />
+    <meta property="og:site_name" content="Hack with MAIT 4.0" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://www.hackwithmait.co/assets/logo.d8d16c01.jpg"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://www.hackwithmait.co/assets/logo.d8d16c01.jpg"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://www.hackwithmait.co/assets/logo.d8d16c01.jpg"
+    />
+    <link
+      rel="mask-icon"
+      href="https://www.hackwithmait.co/assets/logo.d8d16c01.jpg"
+      color="#5bbad5"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://www.hackwithmait.co/assets/logo.d8d16c01.jpg"
+    />
+    <meta name="msapplication-TileColor" content="#4852db" />
+    <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="Welcome to HackwithMAIT3.0, the annual hackathon organized by the TechCom society of the Computer Science and Engineering department at MAIT.
+      content="Welcome to Hack with MAIT 4.0, the annual hackathon organized by the Computer Science and Engineering department at MAIT.
 
     This event brings together some of the brightest and most creative minds from across India to compete and collaborate on innovative ideas and projects. Over the course of the hackathon, participants will have the opportunity to work on a wide range of challenges and problem statements, and to learn from experienced mentors and judges from the tech industry.
 
-    At HackwithMAIT3.0, we believe that creativity and ingenuity knows no bounds."
+    At Hack with MAIT 4.0, we believe that creativity and ingenuity knows no bounds."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
-    <title>Hack with MAIT 3.0</title>
+    <title>Hack with MAIT 4.0</title>
   </head>
   <body>
     <div id="root"></div>
