--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <meta name="language" content="English" />
     <meta name="author" content="HackwithMAIT 4.0" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@nawed2611" />
-    <meta name="twitter:creator" content="@nawed2611" />
-    <meta name="twitter:title" content="Nawed Ali" />
+    <meta name="twitter:title" content="Hack with MAIT" />
     <meta
       name="twitter:description"
       content="Hack with MAIT 4.0 is coming soon!"
