--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.hackwithmait.co/assets/logo.d8d16c01.jpg"
+      content="https://www.hackwithmait.co/assets/HWM_LOGO.c31dc167.jpg"
     />
     <meta property="og:title" content="Hack with MAIT 4.0" />
     <meta
@@ -30,7 +30,7 @@
     />
     <meta
       property="og:image"
-      content="https://www.hackwithmait.co/assets/logo.d8d16c01.jpg"
+      content="https://www.hackwithmait.co/assets/HWM_LOGO.c31dc167.jpg"
     />
     <meta property="og:url" content="https://www.hackwithmait.co" />
     <meta property="og:site_name" content="Hack with MAIT 4.0" />
@@ -40,28 +40,28 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="https://www.hackwithmait.co/assets/logo.d8d16c01.jpg"
+      href="https://www.hackwithmait.co/assets/HWM_LOGO.c31dc167.jpg"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="https://www.hackwithmait.co/assets/logo.d8d16c01.jpg"
+      href="https://www.hackwithmait.co/assets/HWM_LOGO.c31dc167.jpg"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="https://www.hackwithmait.co/assets/logo.d8d16c01.jpg"
+      href="https://www.hackwithmait.co/assets/HWM_LOGO.c31dc167.jpg"
     />
     <link
       rel="mask-icon"
-      href="https://www.hackwithmait.co/assets/logo.d8d16c01.jpg"
+      href="https://www.hackwithmait.co/assets/HWM_LOGO.c31dc167.jpg"
       color="#5bbad5"
     />
     <link
       rel="shortcut icon"
-      href="https://www.hackwithmait.co/assets/logo.d8d16c01.jpg"
+      href="https://www.hackwithmait.co/assets/HWM_LOGO.c31dc167.jpg"
     />
     <meta name="msapplication-TileColor" content="#4852db" />
     <meta name="theme-color" content="#ffffff" />
