Chore: Update meta tags and sponsor tracks

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="title" content="Hack with MAIT 4.0" />
-  <meta name="description" content="Hack with MAIT 4.0 is coming soon!" />
+  <meta name="title" content="HackwithMAIT 4.0" />
+  <meta name="description" content="HackwithMAIT 4.0 is coming soon!" />
   <meta name="keywords"
-    content="Hack with MAIT 4.0, Hackathons, New Delhi, Engineering, Computer Science, GGSIPU, Devfolio Hackathons" />
+    content="HackwithMAIT 4.0, Hackathons, New Delhi, Engineering, Computer Science, GGSIPU, Devfolio Hackathons" />
   <meta name="robots" content="index, follow" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="language" content="English" />
   <meta name="author" content="HackwithMAIT 4.0" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Hack with MAIT" />
-  <meta name="twitter:description" content="Hack with MAIT 4.0 is coming soon!" />
+  <meta name="twitter:title" content="HackwithMAIT 4.0" />
+  <meta name="twitter:description" content="HackwithMAIT 4.0 is coming soon!" />
   <meta name="twitter:image" content="https://www.hackwithmait.co/assets/HWM_LOGO.c31dc167.jpg" />
-  <meta property="og:title" content="Hack with MAIT 4.0" />
-  <meta property="og:description" content="Hack with MAIT 4.0 is coming soon!" />
+  <meta property="og:title" content="HackwithMAIT 4.0" />
+  <meta property="og:description" content="HackwithMAIT 4.0 is coming soon!" />
   <meta property="og:image" content="https://www.hackwithmait.co/assets/HWM_LOGO.c31dc167.jpg" />
   <meta property="og:url" content="https://www.hackwithmait.co" />
-  <meta property="og:site_name" content="Hack with MAIT 4.0" />
+  <meta property="og:site_name" content="HackwithMAIT 4.0" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
 
@@ -37,12 +37,12 @@
 
   <meta name="msapplication-TileColor" content="#4852db" />
   <meta name="theme-color" content="#ffffff" />
-  <meta name="description" content="Welcome to Hack with MAIT 4.0, the annual hackathon organized by the Computer Science and Engineering department at MAIT.
+  <meta name="description" content="Welcome to HackwithMAIT 4.0, the annual hackathon organized by the Computer Science and Engineering department at MAIT.
 
     This event brings together some of the brightest and most creative minds from across India to compete and collaborate on innovative ideas and projects. Over the course of the hackathon, participants will have the opportunity to work on a wide range of challenges and problem statements, and to learn from experienced mentors and judges from the tech industry.
 
-    At Hack with MAIT 4.0, we believe that creativity and ingenuity knows no bounds." />
-  <title>Hack with MAIT 4.0</title>
+    At HackwithMAIT 4.0, we believe that creativity and ingenuity knows no bounds." />
+  <title>HackwithMAIT 4.0</title>
 </head>
 
 <body>
